fix image overflow

--- a/style/global.scss
+++ b/style/global.scss
@@ -2,5 +2,6 @@
 
 $family-serif: "Comfortaa", serif;
 $family-primary: $family-serif;
+$text: rgb(74, 74, 74);
 
 @import "../node_modules/bulma/bulma.sass";
